--- a/Phoneword/Resources/layout/activity_main.xml
+++ b/Phoneword/Resources/layout/activity_main.xml
@@ -33,4 +33,12 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/TranslateButton"
         android:id="@+id/TranslatedPhoneword" />
+    <Button
+        android:text="@string/translationHistory"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/TranslatedPhoneword"
+        android:id="@+id/TranslationHistoryButton"
+        android:enabled="false" 
+      />
 </RelativeLayout>
